@@ -1,3 +1,7 @@
+*23/01/2015* _v1.160.0_
+
+- Ajout action "return" dans les scénarios, pour retourner un message spécifique suite a une intération. Attention à bien cocher la case "Exécuter le plus rapidement possible" pour que ca marche.
+
 *21/01/2015* _v1.160.0_
 
 - Desactivation des contraintes sur la base lors de la mise à jour
